[package]
name = "taiko-forced-inclusion-toolbox"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.35", features = ["derive", "env"] }
tokio = { version = "1.40.0", features = ["full"] }
alloy = { version = "1.4", features = [
    "consensus",
    "json",
    "rpc-types",
    "rpc-types-beacon",
    "reqwest",
    "kzg",
    "arbitrary",
    "provider-ws",
] }
alloy-rlp = "0.3.12"
dotenvy = "0.15.7"
eyre = "0.6.12"
flate2 = "1.1"
thiserror = "2.0"
futures = "0.3.31"
taiko_protocol = { git = "https://github.com/taikoxyz/taiko-mono.git", rev = "f1e2147b65fcc338f28435c3d531bca3a2f890c1", package = "protocol", version = "2.0.0" }
